<resources>

    <string name="app_name">TrainingTasks</string>

    <string name="checkbox_checked">checkBox checked</string>
    <string name="checkBox_unchecked">checkBox unchecked</string>
    <string name="written">Введите шонить</string>

    <string name="apply_button">Применить</string>
    <string name="plus_button">Прибавить</string>
    <string name="clear">Сбросить</string>
    <string name="plus">Сложить</string>

    <string name="zero">0</string>
    <string name="addendum">Введите слагаемое</string>
    <string name="heading_apply_text">Отобразить введенный текст</string>
    <string name="heading_add">Счетчик кликов</string>
    <string name="heading_sum">Сумма чисел</string>

    <string name="heading_test_with_options">Выбери правильный ответ</string>
    <string name="yes">Да</string>
    <string name="No">Нет</string>
    <string name="of_course">Разумеется</string>
    <string name="very_much">очень сильно</string>

    <string name="done">Готово</string>
    <string name="next">Далее</string>
    <string name="back">Назад</string>
    <string name="start_again">Начать заново</string>
    <string name="add">Добавить</string>


    <string name="potato_question">Если три картошки можно сварить за пятнадцать минут, то сколько времени нужно, чтобы сварить одну картошку?</string>
    <string name="five">5</string>
    <string name="calculation_numbers_question">Какие три числа, если их сложить или перемножить, дают один и тот же результат?</string>
    <string name="two_three_five">2, 3, 5</string>
    <string name="one_two_three">1, 2, 3</string>

    <string name="months_question">Какой месяц одновременно первый и последний?</string>
    <string name="third_question_answer_one">Январь</string>
    <string name="third_question_answer_two">Декабрь</string>
    <string name="ChangeBackgroundColor">Сменить цвет фона</string>

    <!-- Theme16 -->

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="authorization">Войти</string>

    <!-- Theme17 -->

    <string name="start_the_game">Начать игру</string>
    <string name="NewGamePageText">Новая игра началась.</string>
    <string name="settings">Настройки</string>
    <string name="records">Рекорды</string>
    <string name="exit">Выход</string>

    <string name="green">Зеленый</string>
    <string name="blue">Синий</string>
    <string name="yellow">желтый</string>
    <string name="red">Красный</string>
    <string name="questionOfChoosingColor">Какой цвет вы хотите выбрать?</string>
    <string name="confirm">Подтвердить</string>
    <string name="color">Цвет</string>
    <string name="title_activity_tic_tac_toe">TicTacToe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete">удалить</string>
    <string name="mix">перемешать</string>

</resources>