<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".theme14_InterfaceOfAndroidAplication.qize.QuizActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/heading_test_with_options"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20sp"
        tools:text="Very very very very very very very very very looooooooooooooooong question" />

    <RadioGroup
        android:id="@+id/radioGroupQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/firstVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="First variant" />

        <RadioButton
            android:id="@+id/secondVariant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            tools:text="Second variant" />

    </RadioGroup>

    <TextView
        android:id="@+id/answerResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="@color/positive"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/previousQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/previous" />

        <Button
            android:id="@+id/nextQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <Button
            android:id="@+id/startAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_again"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>